# dwmstatus

./: CMakeLists.txt  Makefile  README.md  config.mk  dwmstatus.c  dwmstatus.cxx
cmake/: FindLibMPDClient.cmake
